--- a/styles/home/Orderto.module.css
+++ b/styles/home/Orderto.module.css
@@ -16,7 +16,7 @@
 }
 
 .orderproductname:first-of-type::after {
-  content: '|'; /* Adds a pipe separator between size and color */
+  /* content: '|';  */
   margin-left: 2px;
 }
 
@@ -62,8 +62,10 @@
   }
   
   .checkoutPage h2 {
-    font-size: 24px;
+    color: #1f1f39;
+    font-size: 20px;
     margin-top: 0;
+    text-transform: capitalize;
   }
   
   .checkoutPage h3 {
@@ -123,7 +125,7 @@
     flex: 1;
     padding: 10px 20px;
     margin-right: 10px;
-    background-color: #f7f7f7;
+    background-color: #f7f7fc;
     border: 2px solid transparent;
     border-radius: 5px;
     cursor: pointer;
@@ -183,6 +185,8 @@
   
   .orderImage {
     border-radius: 5px;
+    width: 100%;
+    height: 100%;
   }
 
   
@@ -336,7 +340,8 @@
     margin-top: 70px !important;;
   }
   .ShippingInformation {
-    padding: 0px !important;
+    padding: 20px  0 !important;
+    background: #fff;
     
   }
   .ShippingInformation .arrowButton {
