--- a/styles/home/Orderid.module.css
+++ b/styles/home/Orderid.module.css
@@ -115,7 +115,7 @@
   /* background-color: #fafafa; */
   padding: 1.5rem;
   border-radius: 8px;
-  border: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
   display: flex;
   flex-direction: column;
   
