--- a/styles/home/Orderid.module.css
+++ b/styles/home/Orderid.module.css
@@ -332,8 +332,10 @@
 }
 .shippingAddressSection p {
   justify-content: space-between;
-    padding: 10px 50px 5px 0;
-    color: #1f1f39; 
+  padding: 5px 50px 5px 0;
+  color: #1f1f39;
+  border-bottom: 1px solid #b2bcf129;
+  margin: 2px 0;
 }
 
 .sizecolor {
