--- a/styles/home/Orderto.module.css
+++ b/styles/home/Orderto.module.css
@@ -174,6 +174,7 @@
   .orderSummary ul {
     list-style: none;
     padding: 0;
+    border-bottom: 1px solid #e4e2f069;
   }
   
   .orderSummary li {
@@ -280,6 +281,7 @@
 
 .arrowButton svg {
   color: rgb(242 62 20); /* Set the icon color */
+  stroke-width: 2.3;
 }
 
 .arrowButton svg:hover {
@@ -329,7 +331,12 @@
 
   .sizecolor p {
     font-size: .85rem;
-    margin: 5px 0 0;
+    margin: 10px 0 0;
+  }
+  .orderproductname {
+    color: inherit;
+    font-weight: 600;
+    font-size: 1.1rem;
   }
   .orderSummary li {
     width: 100%;
@@ -347,7 +354,13 @@
   .ShippingInformation .arrowButton {
     padding: 0 0 0 10px;
     font-size: 19px;
+    display: flex
+;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
 }
+
 
   .ShippingInformationh1 h1 {
     font-size: medium;
