--- a/app/admin/components/adminhome/OrderStatistics.module.css
+++ b/app/admin/components/adminhome/OrderStatistics.module.css
@@ -6,10 +6,10 @@
   }
   
   .header {
-    font-size: 1.45rem;
+    font-size: 1.2rem;
     margin: 15px 0;
-    color: #000;
-    font-weight: 500;
+    color: inherit;
+    font-weight: 700;
     text-align: left;
   }
   
@@ -64,5 +64,36 @@
     font-size: 0.90rem;
     font-weight: bold;
     color: #222;
+    margin: 10px 0;
+    opacity: .8;
   }
   
+
+  @media (max-width: 768px) {
+  .iconContainer {
+    font-size: 1.5rem;
+    flex-shrink: 0;
+    width: 40px;
+    height: 40px;
+    display: flex;
+color: #fff;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    /* margin-right: 1rem; */
+  } 
+  .card {
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+    transition: transform .3sease;
+    display: flex;
+    gap: 10px;
+    overflow: hidden;
+    padding: 12px;
+   
+    align-items: center;
+    
+  }
+  
+  }
