--- a/styles/admin/AdminAll.module.css
+++ b/styles/admin/AdminAll.module.css
@@ -29,7 +29,7 @@
 
    .dashboardContainer {
     display: flex;
-    background-color: #f7f7fc;
+    /* background-color: #f7f7fc; */
     transition: all 0.3s ease;
   }
   
