--- a/styles/admin/DashboardOverview.module.css
+++ b/styles/admin/DashboardOverview.module.css
@@ -55,10 +55,10 @@
    }
 
    .orderview h1{
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     margin: 15px 0;
-    color: #000;
-    font-weight: 500;
+    color: inherit;
+    font-weight: 600;
    }
 
 
@@ -88,7 +88,7 @@
     /* padding: 24px; */
     padding: 10px;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     position: relative;
   }
@@ -119,7 +119,8 @@
     font-size: 1rem;
     font-weight: 500;
     margin-bottom: 8px;
-    color: #fff;
+    /* color: #fff; */
+    color: inherit;
     margin: 0;
   }
   
