--- a/app/admin/components/adminhome/OrderStatistics.module.css
+++ b/app/admin/components/adminhome/OrderStatistics.module.css
@@ -70,16 +70,22 @@
   
 
   @media (max-width: 768px) {
+
+   .statisticsGrid { gap: 5px;
+    grid-template-columns: repeat(2, 1fr);
+   }
   .iconContainer {
     font-size: 1.5rem;
     flex-shrink: 0;
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     display: flex;
 color: #fff;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    padding: 10px;
+    margin: 0;
     /* margin-right: 1rem; */
   } 
   .card {
@@ -88,12 +94,15 @@ color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
     transition: transform .3sease;
     display: flex;
-    gap: 10px;
-    overflow: hidden;
-    padding: 12px;
-   
-    align-items: center;
+        gap: 3px;
+        flex-direction: column;
+        overflow: hidden;
+        padding: 10px;
+        align-items: self-start;
     
+  }
+  .cardValue {
+    margin: 5px 0; 
   }
   
   }
