--- a/styles/admin/DashboardOverview.module.css
+++ b/styles/admin/DashboardOverview.module.css
@@ -50,9 +50,22 @@
    .greeting h2{
     font-size: 1.45rem;
     margin: 15px 0;
-    color: #000;
+    color: #f03e17;
     font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
    }
+
+   .greeting h2 span{
+    color: #000;
+    font-size: 1.3rem;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: 0.4px;
+    text-transform: capitalize;
+   }
+
 
    .orderview h1{
     font-size: 1.2rem;
@@ -352,6 +365,9 @@
 
   @media (max-width: 768px) {
    
+    .orderview {
+      margin-top: 30px;
+    }
    .dashboardContainer {
     padding: 0px;
    }
@@ -367,7 +383,7 @@
     margin-bottom: 0px;
     }
     .card {
-      padding: 12px;
+      padding: 5px 12px;
     }
     
     .cardTitle {
