--- a/app/admin/product/Adminproduct.module.css
+++ b/app/admin/product/Adminproduct.module.css
@@ -7,7 +7,7 @@
 .searchBarContainer {
     /* padding: 20px; */
     max-width: 1200px;
-    /* margin: 70px auto; */
+    margin: 20px auto;
     
   }
   
@@ -35,6 +35,7 @@
   .allheading {
     font-size: 1.4rem;
     color: #555;
+    margin: 20px 0;
   }
   
   
@@ -1489,18 +1490,35 @@
   
     .productsGrid {
       grid-template-columns: repeat(2, 1fr);
-      gap: 5px;
+      gap: 10px;
     }
     .mainproduct_images {
-      height: 150px;
+      transition-duration: .3s;
+      transition-property: all;
+      transition-timing-function: cubic-bezier(.4,0,.2,1);
+      border-radius: .75rem;
+      display: block;
+      height: auto;
+      aspect-ratio: 12 / 13;
+      width: 100%;
+      max-width: 100%;
     }
   
     .product_list_images {
-      object-fit: contain;
+      width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform .4sease;
+        border-radius: 8px;
+        transition-duration: .3s;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(.4,0,.2,1);
+        border-radius: .75rem;
+        display: block;
     }
   
     .product_list_containet {
-      padding: 10px;
+      padding: 10px 0;
       margin-bottom: 0px;
     }
     .product_icons {
@@ -1522,18 +1540,19 @@
     .price_containet {
       display: flex;
       align-items: flex-start;
-      gap: 5px;
+      gap: 10px;
     }
     .price {
       font-size: 1.2rem;
-      font-weight: 450;
+      font-weight: 700;
       letter-spacing: 0;
     }
   
   
     .price_containet .discountPrice {
-      margin-top: 12px;
-      font-size: 1rem;
+      margin-top: 5px;
+        font-size: 1rem;
+        font-weight: 700;
     }
   
   
@@ -1543,15 +1562,13 @@
     }
   
     .product_list_containet h4 {
-      margin: 0;
-      
+      margin: 0; 
           font-size: 1rem;
           letter-spacing: 0.0px;
           padding: 0;
-         
           word-break: break-all;
           gap: 0;
-        
+          font-weight: 700;
           justify-content: flex-start;
           align-items: flex-start;
           color: #000;
