--- a/styles/admin/Adminsidebar.module.css
+++ b/styles/admin/Adminsidebar.module.css
@@ -158,6 +158,21 @@ text-decoration: none;
 text-transform: capitalize;
 }
 
+
+.logo {
+  width: 110px;
+  padding: 0;
+  margin: 0;
+  gap: 0;
+  display: flex;
+  position: static;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+
 .hamburger {
 cursor: pointer;
 display: flex;
@@ -450,6 +465,20 @@ display: flex;
   height: 60px;
   /* gap: 5%; */
   border-bottom: 2px solid #f3f3f3;
+}
+
+.moblogo {
+  width: 110px;
+    padding: 0;
+    margin: 0;
+    gap: 0;
+    display: flex;
+    position: static;
+}
+
+.moblogo img {
+width: 100%;
+height: 100%;
 }
 
 .moblogo a {
@@ -771,6 +800,15 @@ font-size: 1.5rem;
 
 .logo {
   font-size: 2rem;
+  display: flex;
+  width: 120px;
+  padding: 0;
+  margin: 0;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
 }
 
 /* .navItems li {
