--- a/styles/admin/categories/Categories.module.css
+++ b/styles/admin/categories/Categories.module.css
@@ -279,17 +279,17 @@
 
     .categoryCard {
       width: auto; 
-      padding: 20px 0;
+      padding: 5px 0;
     }
 
     .previewImage {
-      width: 100px;
+      width: 100%;
     }
 .categoryGrid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin-top: 0px;
-    padding: 10px;
+    padding: 0px;
     gap: 10px;
 }
 
