--- a/app/admin/components/components/review.module.css
+++ b/app/admin/components/components/review.module.css
@@ -17,67 +17,7 @@
   gap: 20px;
 }
 
-@media (max-width: 768px) {
-  .review {
-    flex-direction: column;
-    align-items: baseline;
-    text-align: start;
-    gap: 10px;
 
-  }
-  .reviewsHeading {
-    margin: 8px 0;
-  }
-
-  .displayflex_flex_cul {
-    
-    align-items: self-start;
-    justify-content: space-between;
-    gap: 20px;
-    width: 100%;
-    
-  }
-  .stars {
-    display: flex;
-    gap: 10px;
-    text-align: start;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-  }
-  .reviewHeader {
-    align-items: normal;
-  }
-  .productContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: self-start;
-    flex-direction: column;
-  }
-  .productName {
-    margin: 8px 0;
-  }
-
-
-  .heading {
-    display: none;
-  }
-  .mainContent {
-    padding: 0;
-  }
-
-  .container { 
-    /* margin: 60px 0; */
-    padding: 0px;
-  }
-  .productCardContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
-    gap: 20px;
-    overflow: auto;
-    width: 100%;
-  }
-}
 
 
 /* Product Card */
@@ -89,35 +29,40 @@
   transition: transform 0.3s ease;
   max-height: 400px;
   overflow-y: scroll;
-  scrollbar-width: thin; /* For Firefox */
-  scrollbar-color: #cfcfcf #f0f0f0;
+  /* scrollbar-width: thin;  */
+  /* scrollbar-color: #cfcfcf #f0f0f0; */
+  scrollbar-width: none;
+-ms-overflow-style: none;
 
 }
 
+.productCard::-webkit-scrollbar {
+display: none; /* For Chrome, Safari, and Opera */
+}
 
 /* Scrollbar styles for WebKit browsers */
-.productCard::-webkit-scrollbar {
+/* .productCard::-webkit-scrollbar {
   width: 8px;
 }
 
 .productCard::-webkit-scrollbar-track {
-  background-color: #f0f0f0; /* Track color */
+  background-color: #f0f0f0; 
   border-radius: 10px;
 }
 
 .productCard::-webkit-scrollbar-thumb {
-  background-color: #cfcfcf; /* Thumb color */
+  background-color: #cfcfcf; 
   border-radius: 10px;
-  border: 2px solid #f0f0f0; /* Padding around thumb */
+  border: 2px solid #f0f0f0;
 }
 
 .productCard::-webkit-scrollbar-thumb:hover {
-  background-color: #b0b0b0; /* Darker thumb on hover */
+  background-color: #b0b0b0;
 }
 
 .productCard::-webkit-scrollbar-thumb:active {
-  background-color: #9e9e9e; /* Active thumb color */
-}
+  background-color: #9e9e9e; 
+} */
 
 
 .productCard:hover {
@@ -175,7 +120,7 @@
 .review {
   display: flex;
   /* flex-direction: column; */
-  gap: 20px;
+  gap: 5px;
 }
 
 
@@ -185,6 +130,7 @@
   align-items: center;
   flex-direction: column;
   gap: 10px;
+ 
 }
 
 .displayflex_flex_cul p{
@@ -205,12 +151,14 @@ margin-top: 15px;
   flex-direction: column;
   gap: 10px;
   text-align: center;
+ 
 }
 
 .stars div{
   display: flex;
   
 }
+
 
 .comment {
   font-size: 1rem;
@@ -263,4 +211,80 @@ margin-top: 15px;
   color: #333;
   font-weight: 700;
   
+}
+
+
+@media (max-width: 768px) {
+  .review {
+    flex-direction: column;
+    align-items: baseline;
+    text-align: start;
+    gap: 10px;
+
+  }
+  .reviewsHeading {
+    margin: 8px 0;
+  }
+
+  .displayflex_flex_cul {
+    justify-content: space-between;
+    align-items: baseline;
+    gap: 20px;
+    width: 100%;
+    flex-direction: row;
+    
+  }
+  .stars {
+    display: flex;
+    gap: 10px;
+    text-align: start;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .comment {
+    text-align: end;
+  }
+  .reviewHeader {
+    /* align-items: normal; */
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .productContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: self-start;
+    flex-direction: column;
+  }
+  .productName {
+    margin: 8px 0;
+    font-size: 1.2rem;
+  }
+
+
+  .heading {
+    display: none;
+  }
+  .mainContent {
+    padding: 0;
+  }
+
+  .container { 
+    /* margin: 60px 0; */
+    padding: 0px;
+  }
+  .productCardContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+    gap: 20px;
+    overflow: auto;
+    width: 100%;
+  }
+
+  .moreButton {
+    padding-left: 0px;
+  }
 }
