--- a/styles/components/banners.module.css
+++ b/styles/components/banners.module.css
@@ -65,7 +65,8 @@
   .bannerImages {
     position: relative;
     width: 100%;
-    height: 450px;
+    /* height: 450px; */
+    height: auto;
     overflow: hidden;
    
    /* padding: 15px; */
