--- a/styles/admin/product/productdetails.module.css
+++ b/styles/admin/product/productdetails.module.css
@@ -2,9 +2,9 @@
     max-width: 1200px;
    margin: 60px auto;
     padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* background-color: #f9f9f9; */
+    /* border-radius: 8px; */
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   }
   
   .container   h1 {
@@ -93,7 +93,7 @@
 
   @media screen and (max-width: 768px) {
     .container {
-      padding: 15px;
+      padding: 10px;
     }
   
     .formGroup {
@@ -270,6 +270,70 @@
 }
 
 
+.attributeInput {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.tempValue {
+  color: #888;
+  background-color: #f0f0f0;
+  padding: 4px 8px;
+  border-radius: 4px;
+  margin-left: 4px;
+  display: inline-block;
+}
+
+
+.input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+}
+
+.addButton,
+.submitButton {
+  padding: 8px 16px;
+  background-color: #0070f3;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background 0.3s;
+}
+
+.addButton:hover,
+.submitButton:hover {
+  background-color: #005bb5;
+}
+
+.attributeContainer {
+  padding: 8px;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+.values {
+  margin-top: 4px;
+}
+
+.value {
+  display: inline-block;
+  background-color: #f1f1f1;
+  padding: 4px 8px;
+  margin-right: 4px;
+  border-radius: 4px;
+  text-transform: capitalize;
+}
+
+.removeIcon {
+  color: red;
+  margin-left: 4px;
+  cursor: pointer;
+}
 
 
 /* slector categort  */
